--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
     aaptOptions {
         cruncherEnabled = false
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+    }
 }
 
 dependencies {
@@ -29,5 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.amitshekhar.android:android-networking:1.0.2'
+    compile 'com.amitshekhar.android:jackson-android-networking:1.0.2'
     testCompile 'junit:junit:4.12'
 }
