--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.sortingalgorithms">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape">
+            android:name=".activities.auth.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@style/NoActionBar"/>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/title_activity_main"/>
+        <activity
+            android:name=".activities.auth.LoginActivity"
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,16 +29,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlgoritmosDeOrdenamiento"
-            android:parentActivityName=".MainActivity"
+            android:name=".activities.utility.AlgoritmosDeOrdenamiento"
+            android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"></meta-data>
+                android:value=".activities.MainActivity" />
         </activity>
         <activity
-            android:theme="@android:style/Theme.Dialog"
-            android:name=".GuideMenu"></activity>
+            android:name=".activities.GuideMenu"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
